k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-drive
  labels:
    name: go-drive
